--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ section{
     border-width: 2px;
     border-style: solid;
     border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 section h2{
@@ -61,6 +62,7 @@ h1 {
     color: #B5BAC1;
     font-family: 'Nunito Sans', sans-serif;
     font-size: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
@@ -68,6 +70,7 @@ h2 {
     color: #B5BAC1;
     font-family: 'Nunito Sans', sans-serif;
     font-size: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h3 {
@@ -103,6 +106,7 @@ ol ul li a:hover {
 
 a {
     color: #B5BAC1;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 a:hover {
